--- a/gost/config.json
+++ b/gost/config.json
@@ -1,10 +1,12 @@
 {
-    "Debug": false,
-    "Retries": 0,
-    "ServeNodes": [
-        "ss://chacha20-ietf:QWERTyuiop@:555"
-    ],
-    "ChainNodes": [
-        "ss://chacha20-ietf:QWERTyuiop@1.1.1.1:555"
+    "Routes": [
+        {
+            "ServeNodes": [
+                "ss://chacha20-ietf:QWERTyuiop@:555"
+            ],
+            "ChainNodes": [
+                "ss://chacha20-ietf:QWERTyuiop@1.1.1.1:555"
+            ]
+        }
     ]
 }
